# afp

./: .gitignore  index.html  params.json
battleships/: Application.hs  Foundation.hs  Import.hs  LICENSE  Settings.hs  battleships.cabal  devel.hs
battleships/Handler/: About.hs  Favicon.hs  FinishedPlacing.hs  GameEnded.hs  Grid.hs  Home.hs  PlaceShips.hs  PlaceShips2.hs  PlaceShipsGrid.hs  PlaceShipsHelper.hs  Play.hs  PlayHelper.hs  PlayerGrid.hs  Replay.hs  ResetShips.hs  Rules.hs  SaveGame.hs  TrackingGrid.hs  Util.hs
battleships/Logic/: AIUtil.hs  Benchmark.hs  Binary.hs  CleverAI.hs  Debug.hs  DefaultAI.hs  Extern.hs  Game.hs  GameExt.hs  GameFramework.hs  Random.hs  Render.hs  Rendering.hs  Session.hs  StupidAI.hs  Types.hs  Util.hs
battleships/Settings/: Development.hs  StaticFiles.hs
battleships/aibenchmark/: Main.hs  genstat.sh
battleships/app/: main.hs
battleships/config/: key.aes  routes  settings.yml
battleships/img-gen/: Main.hs
battleships/key-gen/: Main.hs
battleships/messages/: de.msg  en.msg
battleships/static/: .htaccess
battleships/static/js/: map.js
battleships/templates/: about.cassius  about.hamlet  board.cassius  default-layout-wrapper.hamlet  default-layout.cassius  default-layout.hamlet  default-layout.julius  finishedplacing.hamlet  gameended.cassius  gameended.hamlet  home.cassius  home.hamlet  legend.cassius  legend.hamlet  placeships.cassius  placeships.hamlet  placeships.julius  placeships2.cassius  placeships2.hamlet  placeships2.julius  placeshipsform.hamlet  placeshipsform.julius  play.cassius  play.hamlet  play.julius  replay.cassius  replay.hamlet  replay.julius  rules.cassius  rules.hamlet  savegame.cassius  savegame.hamlet  shipsOpponent.cassius  shipsOpponent.hamlet
guess_small/: GameState.hs  Main.hs  Util.hs
guess_small/templates/: default.cassius  default.hamlet  home.hamlet  play.hamlet
guessthenumber/: Application.hs  Foundation.hs  devel.hs  guessthenumber.cabal  keygen.hs  load.bat  make
guessthenumber/Handler/: Helper.hs  Home.hs  Play.hs
guessthenumber/Logic/: GameState.hs
guessthenumber/app/: main.hs
guessthenumber/config/: key.aes  routes
guessthenumber/messages/: de.msg  en.msg
guessthenumber/templates/: default-layout-wrapper.hamlet  default-layout.cassius  default-layout.hamlet  play.hamlet  win.hamlet
paperCSCUBS/: paper.tex
src/: howto  index.md  site.hs
src/templates/: default.html
t3small/: Main.hs  Search.hs  TicTacToe.hs
tictactoe/: Application.hs  Foundation.hs  Settings.hs  devel.hs  paketname.cabal  tictactoe.cabal
tictactoe/GameLogic/: Interaction.hs  Search.hs  TicTacToe.hs
tictactoe/Handler/: Another.hs  Circle.hs  Field.hs  Form.hs  Game.hs  Helper.hs  Home.hs  NoScriptPost.hs  Over.hs  Skipping.hs  Smiley.hs  Start.hs
tictactoe/Settings/: Development.hi
tictactoe/config/: client_session_key.aes  routes
tictactoe/messages/: de.msg  en.msg
tictactoe/templates/: default-layout-wrapper.hamlet  default-layout.cassius  default-layout.hamlet  field.hamlet  field.julius  home.cassius  home.hamlet  imagemap.hamlet  noscript.hamlet  over.hamlet  restart.hamlet  start.hamlet
tictactoe/yesod-devel/: arargs.txt  ghcargs.txt
