name:              battleships
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Extra-Source-Files:
                messages/*.msg
                config/routes
                config/settings.yml
                templates/*.cassius
                templates/*.hamlet
                templates/*.lucius
                templates/*.julius
                make

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.Development
                     Handler.Home
                     Handler.Favicon
                     Handler.PlayerGrid
                     Handler.TrackingGrid
                     Logic.GameFramework
                     Logic.StupidAI
                     Logic.Rendering
                     Logic.Session

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                -- * needed for yesod
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.2        && < 1.3
                 , yesod-core                    >= 1.2        && < 1.3
                 , yesod-auth                    >= 1.2        && < 1.3
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , path-pieces
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0.2      && < 1.2
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , wai-extra                     >= 1.3        && < 1.4
                 , http-conduit                  >= 1.9        && < 1.10
                 , warp                          >= 1.3        && < 1.4
                 , cookie
                -- * more monads!!!
                 , monad-control                 >= 0.3        && < 0.4
                 , monad-logger                  >= 0.3
                 , mtl
                 , MonadRandom
                -- * data types
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 0.12
                 , yaml                          >= 0.8        && < 0.9
                 , aeson
                 , containers                    >= 0.5
                 , array
                -- * diagrams
                 , blaze-svg
                 , diagrams-svg                  == 1.0.*
                 , diagrams-lib                  == 1.0.*
                 , colour
                -- * other
                 , template-haskell
                 , data-default
                 , conduit                       >= 1.0
                 , directory                     >= 1.1        && < 1.3
                 , fast-logger                   >= 0.3
                 , random
                 , cereal
                 , QuickCheck

executable         main.cgi
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , battleships
                     , yesod

    ghc-options:       -threaded -O2
