name:              battleships
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Extra-Source-Files:
                messages/*.msg
                config/routes
                config/settings.yml
                templates/*.cassius
                templates/*.hamlet
                templates/*.lucius
                templates/*.julius
                static/js/*.js
                make

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.Development
                     Settings.StaticFiles
                     Handler.Home
                     Handler.Favicon
                     Handler.PlaceShips
                     Handler.PlaceShips2
                     Handler.Play
                     Handler.Util
                     Handler.Grid
                     Handler.GameEnded
                     Handler.Rules
                     Logic.Game
                     Logic.GameExt
                     Logic.StupidAI
                     Logic.Render
                     Logic.Session

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                -- * needed for yesod
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.2        && < 1.3
                 , yesod-core                    >= 1.2        && < 1.3
                 , yesod-auth                    >= 1.2        && < 1.3
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , path-pieces
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0.2      && < 1.3
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , wai-extra                 
                 , wai-logger    
                 , http-conduit                  
                 , warp                          
                 , cookie
                -- * more monads!!!
                 , monad-control                 >= 0.3        && < 0.4
                 , monad-logger                  >= 0.3
                 , mtl
                 , MonadRandom
                -- * data types
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 0.12
                 , yaml                          >= 0.8        && < 0.9
                 , aeson
                 , containers                    
                 , array
                -- * diagrams
                 , blaze-svg
                 , diagrams-svg                  
                 , diagrams-lib                  
                 , colour
                -- * other
                 , template-haskell
                 , data-default
                 , conduit                       >= 1.0
                 , directory                     >= 1.1        && < 1.3
                 , fast-logger                   >= 0.3
                 , random
                 , cereal
                 , QuickCheck
                 , transformers
                 , base64-bytestring
                 , SimpleAES
                 , attoparsec

executable         main.cgi
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , battleships
                     , yesod
                     , wai-extra

    ghc-options:       -threaded -O2
