name:              battleships
version:           0.5.0
cabal-version:     >= 1.8
build-type:        Simple

Extra-Source-Files:
                messages/*.msg
                config/routes
                config/settings.yml
                templates/*.cassius
                templates/*.hamlet
                templates/*.julius
                static/.htaccess
                static/js/*.js
                static/img/*.svg
                static/img/*.ico
                static/img/*.png
                key.aes

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"; also turns on development settings.
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.Development
                     Settings.StaticFiles
                     Handler.Home
                     Handler.PlaceShips
                     Handler.Play
                     Handler.Util
                     Handler.Grid
                     Handler.GameEnded
                     Handler.Rules
                     Logic.Random
                     Logic.Binary
                     Logic.Game
                     Logic.GameExt
                     Logic.CleverAI
                     Logic.StupidAI
                     Logic.AIUtil
                     Logic.Benchmark
                     Logic.Render
                     Logic.Session
                     Logic.Debug

    ghc-options:   -threaded -Wall -Werror 

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -O0
    else
        ghc-options:   -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns

    build-depends: base                          >= 4          && < 5
                -- * needed for yesod
                 , yesod                         >= 1.2        && < 1.3
                 , yesod-core                    >= 1.2        && < 1.3
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-routes
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-text              >= 1.0        && < 1.1
                 , wai-extra                 
                 , wai-logger    
                 , cookie
                 , hjsmin
                -- * more monads!!!
                 , mtl
                 , MonadRandom
                -- * data types
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 0.12
                 , aeson
                 , containers                    
                 , array
                -- * diagrams
                 , blaze-svg
                 , diagrams-svg                  
                 , diagrams-lib                  
                 , colour
                -- * other
                 , template-haskell
                 , data-default
                 , fast-logger                   >= 0.3
                 , cereal
                 , transformers
                 , base64-bytestring
                 , SimpleAES
                 , attoparsec
                 , word8
                 , shakespeare-js

    if flag(library-only)
        build-depends:   warp
                       , directory               >= 1.1        && < 1.3

executable         main.fcgi
    if flag(library-only)
        Buildable: False

    ghc-options:   -threaded -Wall -Werror 

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -O0
        build-depends: warp
    else
        ghc-options:   -O2
        build-depends: wai-handler-fastcgi       >= 1.3        && < 2

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , battleships
                     , yesod

executable img-gen
    if flag(library-only)
        Buildable: False

    extensions:      CPP
                     FlexibleContexts
    main-is:         Main.hs
    hs-source-dirs:  img-gen
    build-depends:   base
                   , mtl
                   , battleships
                   , bytestring
                   , blaze-svg
                   , diagrams-svg
                   , diagrams-lib
                   , filepath
